@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2008 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Alex Blewitt <alex.blewitt@gmail.com> - Replace new Boolean with Boolean.valueOf - https://bugs.eclipse.org/470244
  *******************************************************************************/
 package org.eclipse.search.internal.ui.util;
 
@@ -312,7 +313,7 @@ public abstract class ExtendedDialogWindow extends TrayDialog implements IRunnab
 
 	private void saveEnableStateAndSet(Control w, HashMap h, boolean enabled) {
 		if (!w.isDisposed()) {
-			h.put(w, new Boolean(w.isEnabled()));
+			h.put(w, Boolean.valueOf(w.isEnabled()));
 			w.setEnabled(enabled);
 		}
 	}
